# QriaDrama

./: PackageImporter.py  QriaDrama.pyw  README.md  builtin_libs.py  config.toml  css_colors.py  default.txt  default.zhif  export_pkg.py  functions.py  gui.py  load_pkg.py  main.py  pyproject.toml  run.bat  zhif.py
DevKit/: hello.json  hello.qdl  qdlang.py
HelloWorld/: main.json
HelloWorld/scripts/: 1.json
data/Lucky Lucky/: index.json  qd.json
data/Lucky Lucky/source/: index.txt
data/test/: 1.json  qd.json
data/test/source/: 1.txt
default/: game.toml  main.zhif  run.bat
games/HelloWorld/: main.json  roles.json
games/HelloWorld/scripts/: 1.json
games/LuckyLucky/: main.json  roles.json
games/LuckyLucky/scripts/: start.json
libs/: hello.py
src/: QriaDrama.pyw  jsapi.py  qdc.py
static/: index.html  reader.html
static/css/: animations.css  end-button.css  main.css  reader.css
static/js/: main.js  reader.js
