[project]
name = "zhif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "colorama>=0.4.6",
    "pynput>=1.8.1",
    "pyzstd>=0.16.2",
    "rich>=13.9.4",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
